Fix spacing between projects

--- a/css/projects.css
+++ b/css/projects.css
@@ -102,7 +102,7 @@
     padding-top: 15px;
     padding-bottom: 15px;
 }
-.portfolio .container {
+.project-container .container {
     padding-top: 85px;
     padding-bottom: 90px
 }
